test/Fail/Issue8443.err
Issue8443.agda:19.8-14: error: [UnequalTypes]
The type
  (bot : ⊥) → ⊥
is not a subtype of
  ⊥
when checking that the expression M4.foo has type ⊥
